# qt-android-accessory

./: .gitignore  CMakeLists.txt  linuxAndroidQt.cpp  linuxAndroidQt.h  linuxAndroidQt.kdev4  main.cpp  usbdevice.cpp  usbdevice.h  usbserver.cpp  usbserver.h
.kdev4/: linuxAndroidQt.kdev4
